--- a/po/fi.po
+++ b/po/fi.po
@@ -1112,11 +1112,10 @@ msgstr ""
 "kehittämisen yhtenäiseksi kokonaisuudeksi. Menetelmän avulla varmistetaan, "
 "että yhteisten määritysten soveltaminen on systemaattista ja säilyttää "
 "tietojen semantiikan eri toteutuksissa, ja on siten eri toimijoiden "
-"yhtenäisesti ymmärrettävissä.\n"
-"Menetelmä pohjautuu kansainvälisten standardien soveltamiseen, voit lukea "
-"lisää yhteentoimivuusmenetelmästä ja välineistön kehittämisestä <a "
-"href='https://confluence.csc.fi/pages/viewpage.action?"
-"pageId=51893708'>täältä.</a>"
+"yhtenäisesti ymmärrettävissä. Menetelmä pohjautuu kansainvälisten "
+"standardien soveltamiseen, voit lukea lisää yhteentoimivuusmenetelmästä ja "
+"välineistön kehittämisestä <a href='https://confluence.csc.fi/pages/viewpage."
+"action?pageId=51893708'>täältä.</a>"
 
 #: translations/misc.html:79
 msgid "What is method?"
