--- a/po/fi.po
+++ b/po/fi.po
@@ -30,7 +30,7 @@ msgstr "Lisää tietokomponenttikirjasto"
 
 #: components/group/group.html:13
 msgid "Add profile"
-msgstr "Lisää sovellusprofiili"
+msgstr "Lisää soveltamisprofiili"
 
 #: components/editor/addPropertiesFromClassModal.html:2
 msgid "Add properties from ' + ctrl.classType + ' class"
@@ -96,7 +96,7 @@ msgstr "ja luo uusi"
 
 #: components/group/group.html:43
 msgid "Application profiles"
-msgstr "Sovellusprofiilit"
+msgstr "Soveltamisprofiilit"
 
 #: translations/misc.html:136
 msgid "application/ld+json"
@@ -180,7 +180,7 @@ msgstr "Valinta on tehtävä tietokomponenettikirjaston luokista"
 
 #: translations/misc.html:168
 msgid "Can be selected only from this profile"
-msgstr "Valinta on tehtävä sovellusprofiilin luokista"
+msgstr "Valinta on tehtävä soveltamisprofiilin luokista"
 
 #: components/advancedSearchModal.html:33
 #: components/common/modalTemplate.html:16
@@ -202,7 +202,7 @@ msgstr "Peruuta muokkaus"
 
 #: translations/misc.html:157
 msgid "Cannot require profile"
-msgstr "Sovellusprofiili ei voi olla nimiavaruutena"
+msgstr "Soveltamisprofiili ei voi olla nimiavaruutena"
 
 #: translations/misc.html:76
 msgid "Choose association"
@@ -416,7 +416,7 @@ msgstr "Poista tietokomponenttikirjasto"
 
 #: translations/misc.html:26
 msgid "Delete profile"
-msgstr "Poista sovellusprofiili"
+msgstr "Poista soveltamisprofiili"
 
 #: components/editor/propertyView.html:2
 msgid "Delete property"
@@ -708,7 +708,7 @@ msgstr "Ei vielä yhtään tietokomponenttikirjastoa"
 
 #: components/group/group.html:45
 msgid "No profiles yet"
-msgstr "Ei vielä yhtään sovellusprofiilia"
+msgstr "Ei vielä yhtään soveltamisprofiilia"
 
 #: components/model/referencesView.html:3
 msgid "No references yet"
@@ -770,13 +770,13 @@ msgstr "luokasta"
 msgid "of group"
 msgstr "ryhmästä"
 
-#: translations/misc.html:93
+#: translations/misc.html:93 
 msgid "of model"
 msgstr "tietokomponenttikirjastosta"
 
 #: translations/misc.html:94
 msgid "of profile"
-msgstr "sovellusprofiilista"
+msgstr "soveltamisprofiilista"
 
 #: translations/misc.html:96
 msgid "of shape"
@@ -804,15 +804,15 @@ msgstr "Etuliite saa sisältää vain pieniä kirjaimia"
 
 #: translations/misc.html:31
 msgid "profile"
-msgstr "Sovellusprofiili"
+msgstr "Soveltamisprofiili"
 
 #: translations/misc.html:124
 msgid "Profile information"
-msgstr "Sovellusprofiilin tiedot"
+msgstr "Soveltamisprofiilin tiedot"
 
 #: translations/misc.html:86
 msgid "Profile label"
-msgstr "Sovellusprofiilin nimi"
+msgstr "Soveltamisprofiilin nimi"
 
 #: translations/misc.html:65
 msgid "Range"
