Filter for classes defined in profiles
Closes #312

--- a/po/fi.po
+++ b/po/fi.po
@@ -186,7 +186,7 @@ msgstr "Valinta on tehtävä soveltamisprofiilin luokista"
 #: components/common/modalTemplate.html:16
 #: components/editor/addConceptModal.html:52
 #: components/editor/addPropertiesFromClassModal.html:16
-#: components/editor/searchClassModal.html:55
+#: components/editor/searchClassModal.html:59
 #: components/editor/searchConceptModal.html:60
 #: components/editor/searchPredicateModal.html:75
 #: components/group/addModelModal.html:22
@@ -972,6 +972,10 @@ msgstr "Erikoistettuja luokkia ei saa valita"
 #: components/common/export.html:4 translations/misc.html:21
 msgid "Show"
 msgstr "Näytä"
+
+#: components/editor/searchClassModal.html:37
+msgid "Show classes defined in profiles"
+msgstr "Näytä profiileissa määritellyt luokat"
 
 #: components/editor/searchClassModal.html:33
 #: components/editor/searchPredicateModal.html:54
