--- a/po/fi.po
+++ b/po/fi.po
@@ -479,7 +479,7 @@ msgstr "tallenna"
 msgid "Draft"
 msgstr "Luonnos"
 
-#: components/form/errorMessages.html:10
+#: components/form/errorMessages.html:14
 msgid "Duplicate error"
 msgstr "Syöte on jo lisätty"
 
@@ -517,7 +517,7 @@ msgstr "Vastaavat luokat"
 msgid "Example"
 msgstr "Esimerkki"
 
-#: components/form/errorMessages.html:7
+#: components/form/errorMessages.html:11
 msgid "Existing id error"
 msgstr "Tunniste on jo käytössä"
 
@@ -549,7 +549,7 @@ msgstr "Käyttöliittymä"
 msgid "Generalize class"
 msgstr "Nosta luokka kirjastoon"
 
-#: components/form/errorMessages.html:15
+#: components/form/errorMessages.html:19
 msgid "Greater than max error"
 msgstr "Ei saa olla suurempi kuin maksimi"
 
@@ -600,15 +600,19 @@ msgstr "Ryhmän sisäiset sivut"
 msgid "Interoperability method"
 msgstr "Yhteentoimivuusmenetelmä"
 
-#: components/form/errorMessages.html:6
+#: components/form/errorMessages.html:10
 msgid "Invalid id error"
 msgstr "Virheellinen tunniste"
 
-#: components/form/errorMessages.html:5
+#: components/form/errorMessages.html:9
 msgid "Invalid namespace error"
 msgstr "Nimiavaruuden täytyy päättyä ‘#’ tai ‘/‘ -merkkeihin"
 
-#: components/form/errorMessages.html:4
+#: components/form/errorMessages.html:7
+msgid "Invalid uri error"
+msgstr "Syöte ei ole URI"
+
+#: components/form/errorMessages.html:8
 msgid "Invalid url error"
 msgstr "Syöte ei ole URL"
 
@@ -628,11 +632,11 @@ msgstr "Nimi"
 msgid "ld+json frame"
 msgstr "JSON-LD Frame"
 
-#: components/form/errorMessages.html:12
+#: components/form/errorMessages.html:16
 msgid "Length error"
 msgstr "Syöte on liian pitkä"
 
-#: components/form/errorMessages.html:16
+#: components/form/errorMessages.html:20
 msgid "Less than min error"
 msgstr "Ei saa olla pienempi kuin minimi"
 
@@ -714,7 +718,7 @@ msgstr "Nimi"
 msgid "Namespace"
 msgstr "Nimiavaruus"
 
-#: components/form/errorMessages.html:14
+#: components/form/errorMessages.html:18
 msgid "Negative error"
 msgstr "Ei saa olla negatiivinen"
 
@@ -822,7 +826,7 @@ msgstr "Säännollinen lauseke"
 msgid "Prefix"
 msgstr "Etuliite"
 
-#: components/form/errorMessages.html:13
+#: components/form/errorMessages.html:17
 msgid "Prefix error"
 msgstr "Etuliite saa sisältää vain pieniä kirjaimia"
 
@@ -846,6 +850,10 @@ msgstr "Arvoalue"
 msgid "rdf:langString"
 msgstr "Kieliversioitu teksti"
 
+#: components/form/errorMessages.html:23
+msgid "rdf:langString error"
+msgstr ""
+
 #: translations/misc.html:19
 msgid "Recommendation"
 msgstr "Suositus"
@@ -862,11 +870,11 @@ msgstr "Sanastot"
 msgid "Register"
 msgstr "Luo tunnukset"
 
-#: components/form/errorMessages.html:8
+#: components/form/errorMessages.html:12
 msgid "Required error"
 msgstr "Pakollinen kenttä"
 
-#: components/form/errorMessages.html:9
+#: components/form/errorMessages.html:13
 msgid "Required localized error"
 msgstr "Täytyy olla määritelty vähintään yhdellä kielellä"
 
@@ -1012,7 +1020,7 @@ msgstr "Tarkennettu luokasta"
 msgid "State"
 msgstr "Tila"
 
-#: components/form/errorMessages.html:11
+#: components/form/errorMessages.html:15
 msgid "String error"
 msgstr "Literaalin täytyy alkaa kirjaimella"
 
@@ -1166,61 +1174,121 @@ msgstr "Kirjoita tunniste…"
 msgid "xsd:anyURI"
 msgstr "URI"
 
+#: components/form/errorMessages.html:24
+msgid "xsd:anyURI error"
+msgstr "Virheellinen URI"
+
 #: translations/attribute.html:7
 msgid "xsd:boolean"
 msgstr "Kytkin"
+
+#: components/form/errorMessages.html:25
+msgid "xsd:boolean error"
+msgstr "Virheellinen kykin"
 
 #: translations/attribute.html:14
 msgid "xsd:date"
 msgstr "Päivämäärä"
 
+#: components/form/errorMessages.html:32
+msgid "xsd:date error"
+msgstr "Virheellinen päivämäärä"
+
 #: translations/attribute.html:15
 msgid "xsd:dateTime"
 msgstr "Ajanhetki"
+
+#: components/form/errorMessages.html:33
+msgid "xsd:dateTime error"
+msgstr "Virheellinen ajanhetki"
 
 #: translations/attribute.html:8
 msgid "xsd:decimal"
 msgstr "Desimaali"
 
+#: components/form/errorMessages.html:26
+msgid "xsd:decimal error"
+msgstr "Virheellinen desimaali"
+
 #: translations/attribute.html:9
 msgid "xsd:double"
 msgstr "Desimaali (64bit)"
+
+#: components/form/errorMessages.html:27
+msgid "xsd:double error"
+msgstr "Virheellinen desimaali"
 
 #: translations/attribute.html:10
 msgid "xsd:float"
 msgstr "Desimaali (32bit)"
 
+#: components/form/errorMessages.html:28
+msgid "xsd:float error"
+msgstr "Virheellinen desimaali"
+
 #: translations/attribute.html:19
 msgid "xsd:gDay"
 msgstr "Päivämäärä"
+
+#: components/form/errorMessages.html:37
+msgid "xsd:gDay error"
+msgstr "Virheellinen päivämäärä"
 
 #: translations/attribute.html:18
 msgid "xsd:gMonth"
 msgstr "Kuukausi"
 
+#: components/form/errorMessages.html:36
+msgid "xsd:gMonth error"
+msgstr "Virheellinen kuukausi"
+
 #: translations/attribute.html:17
 msgid "xsd:gYear"
 msgstr "Vuosi"
+
+#: components/form/errorMessages.html:35
+msgid "xsd:gYear error"
+msgstr "Virheellinen vuosi"
 
 #: translations/attribute.html:13
 msgid "xsd:int"
 msgstr "Kokonaisluku (32bit)"
 
+#: components/form/errorMessages.html:31
+msgid "xsd:int error"
+msgstr "Virheellinen kokonaisluku"
+
 #: translations/attribute.html:11
 msgid "xsd:integer"
 msgstr "Kokonaisluku"
+
+#: components/form/errorMessages.html:29
+msgid "xsd:integer error"
+msgstr "Virheellinen kokonaisluku"
 
 #: translations/attribute.html:12
 msgid "xsd:long"
 msgstr "Kokonaisluku (64bit)"
 
+#: components/form/errorMessages.html:30
+msgid "xsd:long error"
+msgstr "Virheellinen kokonaisluku"
+
 #: translations/attribute.html:4
 msgid "xsd:string"
 msgstr "Teksti"
 
+#: components/form/errorMessages.html:22
+msgid "xsd:string error"
+msgstr "Virheellinen teksti"
+
 #: translations/attribute.html:16
 msgid "xsd:time"
 msgstr "Aika"
+
+#: components/form/errorMessages.html:34
+msgid "xsd:time error"
+msgstr "Virheellinen aika"
 
 #: components/common/modalTemplate.html:15
 #: components/editor/addPropertiesFromClassModal.html:15
@@ -1228,9 +1296,6 @@ msgid "Yes"
 msgstr "Kyllä"
 
 #~ msgid "Invalid ID"
-#~ msgstr "Virheellinen tunniste"
-
-#~ msgid "Invalid uri error"
 #~ msgstr "Virheellinen tunniste"
 
 #~ msgid "text/ld+json+context"
