--- a/po/fi.po
+++ b/po/fi.po
@@ -872,6 +872,10 @@ msgstr "Soveltamisprofiilin tiedot"
 msgid "Profile label"
 msgstr "Soveltamisprofiilin nimi"
 
+#: translations/misc.html:190
+msgid "Property identifier"
+msgstr "Ominaisuuden tunniste"
+
 #: translations/misc.html:66
 msgid "Range"
 msgstr "Arvoalue"
@@ -916,7 +920,7 @@ msgstr "On jo käytössä"
 msgid "Resource status restricts removing"
 msgstr "Ei ole poistettavassa tilassa"
 
-#: components/editor/propertyView.html:46
+#: components/editor/propertyView.html:50
 msgid "Reusable predicate"
 msgstr "Uudelleenkäytettävä ominaisuus"
 
